tests/fail/unique_freeze_mutate.stderr
tests/fail/unique_freeze_mutate.tk:10:7: error[E0442]: Cannot mutably borrow immutable entity 'p'
tests/fail/unique_freeze_mutate.tk:10:7: error[E0406]: Cannot assign to immutable entity. Missing writable token '#' or '!'.
tests/fail/unique_freeze_mutate.tk:10:5: error[E0443]: Cannot modify immutable entity 'i32'
